C2: assert(false) failed: Bad graph detected in build_loop_late

XMLWordPrintable

    • b24
    • 17
    • b16

        The attached Java Fuzzer test starts to fail after JDK-8252372 with the following assertion:

        To reproduce:
        $ java -XX:-TieredCompilation -Xcomp -XX:CompileOnly=Test Test.java

        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/opt/mach5/mesos/work_dir/slaves/3c846bae-ce30-4a97-93ee-9fef4497ccb6-S124123/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/57294efe-464f-4c0a-b55a-fd67bfa32e7b/runs/71c23d41-87fd-4de4-92b5-4ba130c3e1dd/workspace/open/src/hotspot/share/opto/loopnode.cpp:5337), pid=1941868, tid=1941881
        # assert(false) failed: Bad graph detected in build_loop_late
        #
        # JRE version: Java(TM) SE Runtime Environment (18.0+7) (fastdebug build 18-ea+7-268)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 18-ea+7-268, compiled mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0x12ddb47] PhaseIdealLoop::build_loop_late_post_work(Node*, bool)+0x307
        ...........
        Command Line: -XX:CompileCommand=quiet -XX:-TieredCompilation -Xcomp -XX:CompileOnly=Test Test
        ...........
        Current thread (0x00007f649c2b1140): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=1941881, stack(0x00007f64562fb000,0x00007f64563fc000)]


        Current CompileTask:
        C2: 230 3 b Test::mainTest (566 bytes)

        Stack: [0x00007f64562fb000,0x00007f64563fc000], sp=0x00007f64563f62f0, free space=1004k
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0x12ddb47] PhaseIdealLoop::build_loop_late_post_work(Node*, bool)+0x307
        V [libjvm.so+0x12ddfea] PhaseIdealLoop::build_loop_late(VectorSet&, Node_List&, Node_Stack&)+0xba
        V [libjvm.so+0x12de957] PhaseIdealLoop::build_and_optimize(LoopOptsMode)+0x507
        V [libjvm.so+0x9fba3c] PhaseIdealLoop::optimize(PhaseIterGVN&, LoopOptsMode)+0x28c
        V [libjvm.so+0x9f8525] Compile::Optimize()+0x1475
        V [libjvm.so+0x9f9ff4] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, bool, DirectiveSet*)+0x1564
        V [libjvm.so+0x81a076] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x646
        V [libjvm.so+0xa0aab9] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xef9
        V [libjvm.so+0xa0b7e8] CompileBroker::compiler_thread_loop()+0x598
        V [libjvm.so+0x186829c] JavaThread::thread_main_inner()+0x27c
        V [libjvm.so+0x186eb90] Thread::call_run()+0x100
        V [libjvm.so+0x1551464] thread_native_entry(Thread*)+0x104

          1. FuzzerUtils.java
            13 kB
          2. hs_err_pid1941868.log
            57 kB
          3. Test.java
            8 kB

              Assignee:
              Christian Hagedorn
              Reporter:
              Christian Hagedorn
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: