8271954: C2: assert(false) failed: Bad graph detected in build_loop_late